# demiurge

./: .gitmodules  LICENSE  README.md
boards/: .gitignore
boards/demi1/: .gitignore  demiurge-panel_template.kicad_pcb  demiurge-panel_template.kicad_prl  demiurge-panel_template.kicad_pro  demiurge.kicad_pcb  demiurge.kicad_prl  demiurge.kicad_sch  demiurge.xml  fp-lib-table  sym-lib-table
hardware/: .gitignore  README.md  analog-in.kicad_sch  analog-out.kicad_sch  demiurge.kicad_pcb  demiurge.kicad_prl  demiurge.kicad_pro  demiurge.kicad_sch  demiurge.sch  fp-lib-table  i2s.kicad_sch  panel_template.kicad_pcb  panel_template.kicad_prl  panel_template.kicad_pro  panel_template.step  potled.kicad_sch
hardware/RevA/: demiurge-B_Cu.gbr  demiurge-B_Mask.gbr  demiurge-B_Paste.gbr  demiurge-B_Silkscreen.gbr  demiurge-Edge_Cuts.gbr  demiurge-F_Cu.gbr  demiurge-F_Mask.gbr  demiurge-F_Paste.gbr  (+6 more)
software/: .cproject  .gitignore  .mxproject  .project  .template  CMakeLists.txt  CMakeLists_template.txt  README.md  aaa-dev-board.cfg  abc.txt  def.txt  demiurge-ch32v307.cbp  demiurge-ch32v307.hex  demiurge-ch32v307.ioc  demiurge1.ioc
software/AwesomeAudioApparatus/Demiurge/Inc/: adsr.h  cfxrbjfilter.h  control_pair.h  cv_outport.h  demiurge-spi.h  demiurge.h  fixed_signal.h  gate_outport.h  logger.h  mixer.h  octave_per_volt.h  offset.h  oscillator.h  passthru.h  potentiometer.h  pushbutton.h  signal.h  svf.h  volume.h
software/AwesomeAudioApparatus/Demiurge/Src/: adsr.c  audio_inport.c  audio_outport.c  averager.c  calculator.c  cfxrbjfilter.c  control_pair.c  cv_inport.c  cv_outport.c  demiurge.c  fixed_signal.c  gate_inport.c  gate_outport.c  inverter.c  led.c  lg.c  lg10.c  lg2.c  logger.c  mixer.c  octave_per_volt.c  offset.c  oscillator.c  pan.c  passthru.c  potentiometer.c  pushbutton.c  scale.c  svf.c  volume.c
software/AwesomeAudioApparatus/ch32v307/: ch32v307-adc.c  ch32v307-button.c  ch32v307-dac.c  ch32v307-flash.c  ch32v307-gate.c  ch32v307-led.c  ch32v307-pot.c  ch32v307-sdcard.c  ch32v307-testpoints.c  ch32v307-timer.c  ch32v307-usb.c  ch32v307.c
software/Core/Inc/: RTE_Components.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
software/Core/Src/: VCA.c  VCO.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
software/Debug/: debug.h
software/Drivers/BSP/AwesomeAudioApparatus_board/Demiurge1/: demiurge-hardware.h
software/Drivers/BSP/AwesomeAudioApparatus_board/Demiurge1/demi1-stm32f4/: demiurge1.ioc  hardware.h  stm32f4-adc.c  stm32f4-button.c  stm32f4-dac.c  stm32f4-gate.c  stm32f4-led.c  stm32f4-pot.c  stm32f4-testpoints.c  stm32f4-timer.c  stm32f4.c
software/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_flash.c  stm32f4xx_hal_i2c.c
software/User/: AwesomeAudioApparatus.Demiurge_conf.h  Envelope.c  VCA.c  VCO.c  boot-counter.c  ch32v30x_it.c  main.c  system_ch32v30x.c
software/User/App/: app_user.c  user.c
software/boards/: demi1-ch32.h  demiurge-board.h  demiurge-hardware.h
software/boards/demi1-ch32/: ch32v307-adc.c  ch32v307-button.c  ch32v307-dac.c  ch32v307-flash.c  ch32v307-gate.c  ch32v307-led.c  ch32v307-pot.c  ch32v307-sdcard.c  ch32v307-testpoints.c  ch32v307-timer.c  ch32v307-usb.c  ch32v307.c  hardware.h
software/components/demiurge/inc/: adsr.h  audio_inport.h  audio_outport.h  averager.h  cfxrbjfilter.h  clipping.h  control_pair.h  cv_inport.h  demi_asserts.h  demiurge-spi.h  demiurge.h  gate_inport.h  led.h  lg.h  octave_per_volt.h  oscillator.h  pan.h  passthru.h  scale.h  signal.h
software/components/demiurge/src/: adsr.c  audio_inport.c  audio_outport.c  cfxrbjfilter.c  control_pair.c  cv_inport.c  cv_outport.c  demiurge.c  gate_inport.c  gate_outport.c  led.c  lg10.c  mixer.c  octave_per_volt.c  offset.c  oscillator.c  passthru.c  potentiometer.c  pushbutton.c  scale.c  svf.c  threshold.c
software/components/littlefs/: lfs.c
software/docs/: blocks.md  demiurge-sound-processing.doc  devenv.md  examples.md  functions.md  model.md  usage.md
software/docs/blocks/: oscillator.md
software/examples/: Envelope.c  Mixer.c  VCA.c  VCO.c
software/mcu/ch32v307/: link.ld
software/mcu/ch32v307/debug/: debug.h
software/mcu/ch32v307/peripherals/src/: ch32v30x_adc.c  ch32v30x_bkp.c  ch32v30x_can.c  ch32v30x_dac.c  ch32v30x_dma.c  ch32v30x_eth.c  ch32v30x_fsmc.c  ch32v30x_gpio.c  ch32v30x_i2c.c  ch32v30x_pwr.c  ch32v30x_rng.c  ch32v30x_sdio.c  ch32v30x_spi.c  ch32v30x_tim.c  ch32v30x_usart.c  ch32v30x_wwdg.c
software/mcu/ch32v307/rtdrivers/: drv_gpio.c  drv_usart.c
software/mcu/ch32v307/rtthread/: board.c
software/mcu/ch32v307/rtthread/src/: object.c
software/mcu/ch32v307/system/inc/: ch32v30x.h  ch32v30x_conf.h
software/mcu/ch32v307/system/src/: ch32v30x_it.c  system_ch32v30x.c
software/pack-links/: app_Demiurge_c.ftl  default_conf.ftl  user_c.ftl
software/support/clion/: demiurge1.cfg
software/user/: boot-counter.c  main.c
stm32-packs/: .gitignore  AwesomeAudioApparatus.pidx  upload.sh
(+84 files in other folders)
